# ChangeLog for dev-lang/php
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.935 2015/03/03 06:11:48 dlan Exp $

  02 Mar 2015; Yixun Lan <dlan@gentoo.org> php-5.6.6.ebuild:
  add arm64 support, tested on A53 board

  26 Feb 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for HPPA (bug #541098).

  25 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.38.ebuild,
  php-5.5.22.ebuild:
  Stable for amd64, wrt bug #541098

  23 Feb 2015; Tobias Klausmann <klausman@gentoo.org> php-5.5.21.ebuild:
  Stable on alpha, bug 533998

  23 Feb 2015; Tobias Klausmann <klausman@gentoo.org> php-5.4.37.ebuild:
  Stable on alpha, bug 533998

  23 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ia64, wrt bug #533998

*php-5.4.38 (20 Feb 2015)
*php-5.5.22 (20 Feb 2015)
*php-5.6.6 (20 Feb 2015)

  20 Feb 2015; Ole Markus With <olemarkus@gentoo.org> +php-5.4.38.ebuild,
  +php-5.5.22.ebuild, +php-5.6.6.ebuild:
  Version bumps

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ppc64, wrt bug #533998

  16 Feb 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for sparc, wrt bug #533998

  01 Feb 2015; Markus Meier <maekke@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  arm stable, bug #533998

  31 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for ppc, wrt bug #533998

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for x86, wrt bug #533998

  25 Jan 2015; Agostino Sarubbo <ago@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for amd64, wrt bug #533998

  25 Jan 2015; Jeroen Roovers <jer@gentoo.org> php-5.4.37.ebuild,
  php-5.5.21.ebuild:
  Stable for HPPA (bug #533998).

*php-5.6.5 (23 Jan 2015)