@@ -34,30 +34,20 @@ DIST php-patchset-5.4-r2.tar.bz2 5824 SHA256 4a47f4d31f50a244f85349486cdb3474cf3
 EBUILD php-5.3.29.ebuild 22246 SHA256 ae2851b568b98aa7ace3e1347f37b6ae1c5bee062e46fce659088f10b1499549 SHA512 e4c72e905de0cb6e210ee762c92afa11b8fc559bb571d9e8b6f98f35a41437b47f8b3c2d8c9744c0a2a500f86bf69e7481e95f8ab4b99cbf08ac33919ac631b4 WHIRLPOOL 8798b497435a945a2202dda092f9f7191c9c6e653ab07b3567f2f760c4fcdb3b70be85a38b91c9b84bee0f721cbacaf29584d1af508ace5da2068d7f9caf2931
 EBUILD php-5.4.36.ebuild 22377 SHA256 1ccdfcd41b96f68742f572d9c04eb6e9c595c259ef0f9dfdb3eae9708053d259 SHA512 87d54708dbfaaaf2fd2f7525c9b7bdf221873054f39285e3656ec0c8111f77dc4a8b3cfb4919de7c37a480ffa18dc04fcb67b4dfe998ad66049b6858900046d9 WHIRLPOOL a9028af8da2b3b2df2aba36f82c64f2af422b8b5a25e77d1e3b1f2a2d9820c407bc7bf7828d7b9bd1065ffc49f2a8bc8e2e7554ae6ab8d5611b9773cecd89207
 EBUILD php-5.4.37.ebuild 22393 SHA256 2ef8b57d25ee17d7d0b9c51befc4253261d674f6fe804562902fa04f64a0e4a1 SHA512 fdac0db1b0b059b0da424f5293a901b7f2101a9170bc29b0afa29068e8b74e964a35317025c01666a59fde442b6627767ea34e810f32954e3f5d46543602240a WHIRLPOOL 1cbcb32c28d9ee9ca0200070d39d3e073b0c5b744a9ffbe3bbb1ec580842d016a42e8682017270051987345f14c73a3f9dd1663c701f96de8dacf4bb4b171db9
-EBUILD php-5.4.38.ebuild 22394 SHA256 5431e28a245081d9f9359a21e766f83ab09d7cfa5c5781466df0e687edaee166 SHA512 4d3ad9442de5021b857747ca520c87392bc6174bd7f8e28c7147e32c6fb155d7e394a15b5c49fb8eb0d38a1529a4713a84a1e011e44ca2efacbf3109688df0b0 WHIRLPOOL 0e1422dbc8164b1d33bd64a45cf750f27793c8d1ac08f08d39931ef1f013b00a8ce8f8ba8d1cb90c0ee92cf4fbecef4a774980e5c4ec0686e17c93365a342718
+EBUILD php-5.4.38.ebuild 22396 SHA256 c602377b24eb43249a142d23e2737feee22c05236a2ef4976226a86a086da33e SHA512 7d0690d5197b45a19d1441cbed80d18cd0168aed0fd7d96fa2156cfb853df92a529f0cda80e7e41e29d55171e310095edc3c0e3cacebef632cfcfce1ecc18d17 WHIRLPOOL 4a84df1ac5b769f898fe1cb2bfc4ab921e1565cda7b7829ddd849e87bccba0399974a2817832035fda38ac2ab42ea6bd4ca01e7f0128527deb3a7ad8b1ca1330
 EBUILD php-5.5.20.ebuild 22311 SHA256 010bb641a42700948bf146826e1c21284d0a0cf5fdd47453bdf18fecddb7239f SHA512 92ce6eced80ab9859f04b044dcf6533505cf5c1a933aef3c6d599d0f2d156fe94dd494e03b88a69910fa6bbc23bb78b420995a13971b3cf6813301538408c794 WHIRLPOOL 13aa02b7f6495103ee36cea2861bb4cb25d38e33e94a3b6af7a9994c3c84526556352015fe45913794f74f15c517c090901535ee53dd7a508c799e3849df5cab
 EBUILD php-5.5.21.ebuild 22327 SHA256 7d689ea76263637e3341ae8ac9edb86e9a81cb333fef98dd913afee8212fc1f8 SHA512 0c63826c58bb6317494cc24c4b163573ba42c6f990183d2ab4de2fbc11031a1fe6afa3177a8f95218392e8bd6e75606bcdd7d52ea476661288202367b2bb3fcf WHIRLPOOL 6cbf7405e422cbcfa7d0098835e1d8475f4f6bd933978ccad041b4532f308267d039816eb4d324025c9e54f7f86297db82810ce8eb6d462b4b18a07a54847325
-EBUILD php-5.5.22.ebuild 22328 SHA256 f6ee29310987166804c66f82d788f2e9514e186f2ad5952f5c3fdecb059d6cd3 SHA512 5faf08fc08056c5791d601807bad614c66d7e0f826f050c300b5f7b773a56e56fadfcc41e4beab628525d96c901c6fc4e951aa0823243fb5d8372dda9676a3d9 WHIRLPOOL 88872e84e2856e8619a92064fb90295de7ede74cad8daaea00bd007ff6470458cf6847b760d16ff080b743d8be497bd0d407de90691802b064409398c20f21ae
+EBUILD php-5.5.22.ebuild 22330 SHA256 72c18013e01d96c8f432862fd3982f04c74d1c1aa09628c95c50b7b620e8e975 SHA512 d49796dab8bee76fa9f5a2f39fca7955e75bc5d94b71bc58f491e68d1272d6eaa69ec2e82d0a1b7f350564ac32fc32e698ddc216cca1ca33a31180860a568395 WHIRLPOOL 3d9303834ea78324b6c4fa20b5c8c12bb4f310850b5301c45d18d1633b25f5904af490f4d8b587e0539bb14a22eac590d1bfbffc3120d1655e94db1c3180558b
 EBUILD php-5.6.4.ebuild 22318 SHA256 27aa7ce3432dca3ab4f7f78081109858f370de55380c273c8418355bce899bd9 SHA512 393d7aa225d3e0579994c963a668f71d54030f603d867c1e9a54a9cb1ed175b9dee5ce3052e01e2513efaf6ad5b20111a84aaee7217186b2467224e8c1f434d4 WHIRLPOOL 95522df7cfa84cd58976e27f2a06087360a68125b10e17b6e1d79051af2a59fde34807d3eafe4f6675595f24d4070c983d27075139805d7e83ad436237eb202b
 EBUILD php-5.6.5.ebuild 22335 SHA256 3b7a2087362fbe9397e6ecd662460d6447199557f4ca619d87e6a5eec9906cfc SHA512 09b855e50694941c26b32426b1f9576b9654b25425109dabf67f9e9fa07b54149f43a9b95a39c8fd393990aeb86e0acf76230a5b1e25ac2610a077e4b18afb82 WHIRLPOOL 65a320335124a0dc48ca3d9dc8de36b052bf5b2af60e21ca058dd93cb0aaa9781f8e09b925788e7b081b9e11164e249c9b8dd33f5cd22054a874d49c69629cbb
 EBUILD php-5.6.6.ebuild 22337 SHA256 42b11577986dbdb84aabf2b909a49b876f4dde9063d0b4e26549b7096f7dba13 SHA512 41a32f74a87b1c1526fbd1a3c7214f419bc8c6b3d2424fcc5b4e4e77b67d8e50e53dc8f90171460d1dc3f7698963a6efac81e2d4cb103d75a3ed2cab61e57f0e WHIRLPOOL dbb7b36554d04d0df6967ca114eac6dcfc8918531621d94e49652dbed021d4e1eb3f84e570ac57b68af5dc7ce8f59cc25e72409b6d90a40a1f1956c7c9fb3e52
-MISC ChangeLog 38706 SHA256 4eab64fbdee3aeb1b5404c0c5771f33bd5ee48cca064fe99349092f96d477183 SHA512 09a8b53c1d6b80c1dcded999be441d727eafe854f233b16b06b9fb3ac9321c53fa3fa9e555e1ad637fa3277c0e285305e211f5156d3477730680e8aeea330cac WHIRLPOOL bae383dc7b195e37ce98f777a363f0354e5bc6f1d4660dc4bb2620697a4c04490cfec5c2fdf571bd4e80b44a47b5d1dd3f1f4b7fd5a9b7659579095f9d95b318
+MISC ChangeLog 38896 SHA256 5093834ad5546f7797eac39736ba917c52774cb640b0d3b0156ba402836e70e8 SHA512 7ff30c7be268a95f008b15b75627dfdbf542615e26d0791d4a9ba867bda3bc71d994e5605b9c657f96ea5c56d5bcc07b4efe8cd75d3f9ba0b2242bbf90122cd7 WHIRLPOOL d912aa36675963a70931600cbac6aecb429e1a5af61aa5c6c097fffc8eb80baf064d58dd5007db42692c33efa26329a4180251e918b1ffb237972f99644bc2bf
 MISC ChangeLog-2012 108488 SHA256 c2eea36502d34eadc7995d546f78aaa553ba07beeb51ea738715ad7f2e51b08d SHA512 eb25224993eff1ea42ea133302991a3ffad3adda0bc524cfa4fae49574230a8e65b35b08750d780c11cc9c152435fadbf2c416241fac28dcbb025e060e96cd7a WHIRLPOOL 82f627853fa961f3f3707fb2c8757acbc8fc644e89121d78703b40ff0f668aa7d0f1aa26c77f8f503e4f6da22ed865e4cb7c02d5d112c89488b12aa6b0d80568
 MISC metadata.xml 1601 SHA256 0f0d69832d7bf8ca13c940247d67e184d866ae48f4f77167b3b6a508f4c0ebfe SHA512 744b80efb645e7c6e632101c98cb7bcaf2a6530d948e5cb320050cfe4ca3733e29b995e2b1e4677b648c7a9e051a8056c6f38ae03ae18656a9583b24c32b6056 WHIRLPOOL 8ba9c5edf403759541ea1aad65138f48ddc4e4bef73c3a43744e1d0513031ab431fe1e742a39125257c3545ae0a091118d1b36d04a28bdf96e9989185764ae50
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU9N/JAAoJEJIMDbyqvv1V6twP/Rmpk6g0BPoVRaHDDSvbg3AJ
-5kAgkKMZO5swHt4bC78+Os/vtbdK2vUgC14ggfBKv8N+yPhQnr9k/hIhEeMuL+Kr
-9a6WGkgcJpS7ZaX/CW+lYy/q4imesiF62SwOgU6GqIZcl263lv0ZCWTVH7L+5Q1r
-Jtd+M+yz0xO3cR83+1E34CDjfRwRvnFhLk8NXAu00fTrFRdzwE5vm4INjeA789x0
-x6jpfDjNRk4BOaN4Tb61ERBzZQidbwYEcwlos9o1xUtApv7Dbp+aOMTVNRJoc8rw
-2B/xmZl5YiZRtvJqik7rKSpzVU/RG4lbljWM/ziXO3T8zgnKkOu0R6eeyC068vCJ
-FISkHrtDXruUxHUsczMciu36OYbEJARzhQT1kxvjZMVFJDyaH9xo3r8Rcf4NcygL
-IkH5DcUnd0B6+n6Weu9gg6FU8FLbfBf4snzNPI3S0r9a7qJrWDR0hDYHIWkY5ryy
-CwZuxbpEUixtwtP3vl70cN8CjIWam7jDHoZ9xtoUvXnuiqa7bo64Vqh1McxDBd8+
-ils8ZVvzuLOMdKx9UF/4oRHoS0jMoLBECnoqrpHpoAM6GzHBQ5qEBcsSRvh6gvVs
-vZCu85umHlXCSULlgyitOsk5WtuwNRfpu2mFtsln4MbzyleUyYRSWMODimkzrmCb
-2WP/PgJZS5NCJdWV5YAo
-=CfW5
+iEYEAREIAAYFAlT2nycACgkQkKaRLQcq0GK9ewCfVn6+UzRHZfujEGjPGHbUHmI6
+2JwAn1Crj1z3VcXDJ5+m429m6A8Wf47p
+=uSzp
 -----END PGP SIGNATURE-----
