@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/php
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.935 2015/03/03 06:11:48 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.937 2015/03/04 05:59:01 maekke Exp $
+
+  04 Mar 2015; Markus Meier <maekke@gentoo.org> php-5.5.22.ebuild:
+  arm stable, bug #541098
+
+  04 Mar 2015; Markus Meier <maekke@gentoo.org> php-5.4.38.ebuild:
+  arm stable, bug #541098
 
   02 Mar 2015; Yixun Lan <dlan@gentoo.org> php-5.6.6.ebuild:
   add arm64 support, tested on A53 board
